--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,32 +1,34 @@
 // @import './fonts';
 // @import './icons';
-@import './reset';
-@import './config';
+@import "./reset";
+@import "./config";
 
-@import '../components/Header/Header';
-@import '../components/Products/Products';
-@import '../components/Shopping/Shopping';
+@import "../components/Header/Header";
+@import "../components/Products/Products";
+@import "../components/Shopping/Shopping";
 
 // common
+html {
+  height: 100%;
+  width: 100vw;
+}
 
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1.3;
   background-color: $color-light;
   font-weight: 400;
+  width: 100%;
+  height: 100%;
 }
 
-[class$='container'] {
+[class$="container"] {
   max-width: 1200px;
   padding: 0 10px;
   margin: 0 auto;
 }
 
-body {
-  width: 100vw;
-}
-
 .lock {
-  position: fixed;
+  // position: fixed;
   overflow-y: scroll;
 }
